[package]
name = "json-decode"
version = "0.3.0"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
homepage = "https://github.com/polyandglot/json-decode"
keywords = ["json", "decode"]
description = "An elm inspired runtime JSON decoder for Rust"
license = "MPL-2.0"
documentation = "https://docs.rs/json-decode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0.44"
